@@ -1,8 +1,9 @@
 from .defs import *
 from .api import *
-from .sdl2_symbols import *
-from .sdl2_cpuinfo_symbols import *
-from .sdl2_version_symbols import *
+from .sdl2 import *
+from .sdl2_cpuinfo import *
+from .sdl2_version import *
+from .sdl2_timer import *
 
 __author__  = 'vaiorabbit'
 __version__ = '1.0.0'
@@ -12,9 +13,15 @@ def sdl2_load(lib, output_error = False):
 
     api.SDL2_LOADER = ctypes.cdll.LoadLibrary(lib)
 
-    sdl2_symbols.setup_symbols()
-    sdl2_cpuinfo_symbols.setup_symbols()
-    sdl2_version_symbols.setup_symbols()
+    # api.setup_symbols(lib, output_error)
+    sdl2.setup_symbols()
+    sdl2_cpuinfo.setup_symbols()
+    sdl2_version.setup_symbols()
+    sdl2_timer.setup_symbols()
+
+    # SDL2_API_NAMES.append('SDL_SetMainReady')
+    # SDL2_API_ARGS_MAP['SDL_SetMainReady'] = []
+    # SDL2_API_RETVAL_MAP['SDL_SetMainReady'] = None
 
     for name in api.SDL2_API_NAMES:
         try:
