@@ -1,3 +1,7 @@
+2018-03-18  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sdl2/sdl2_timer.py: Added.
+
 2018-03-11  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Started
